Video elements do not work as sources for TexImage2D calls in GPU Process https://bugs.webkit.org/show_bug.cgi?id=218184

Reviewed by Eric Carlson.

A follow-up patch of r273213 to fix build failures on the windows port.

* platform/graphics/MediaPlayer.h:


Canonical link: https://commits.webkit.org/234443@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@273272 268f45cc-cd09-0410-ab3c-d52691b4dbfc